--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Página Web</title>
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -12,21 +13,17 @@
         <nav>
             <ul>
                 <li><a href="admin.html">Administrador</a></li>
-                <li><a href="maestros.html">Maestros</a></li>
-                <li><a href="alumnos.html">Alumnos</a></li>
+                <li><a href="teachers.html">Maestros</a></li>
+                <li><a href="students.html">Alumnos</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
-        <section>
-            <h2>Inicio</h2>
-            <p>Este es el portal principal de mi sitio web. Selecciona un enlace de arriba para acceder a la sección correspondiente.</p>
-        </section>
+        <h2>Inicio</h2>
+        <p>Este es el portal principal de mi sitio web. Selecciona un enlace de arriba para acceder a la sección correspondiente.</p>
     </main>
-
     <footer>
-        <p>&copy; 2024 Mi Página Web</p>
+        <p>© 2024 Mi Página Web</p>
     </footer>
 </body>
 </html>
