--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <title>Bienvenido a Mi Página Web</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <h1>Bienvenido a Mi Página Web</h1>
         <nav>
             <ul>
-                <li><a href="admin.html">Administrador</a></li>
-                <li><a href="teachers.html">Maestros</a></li>
-                <li><a href="students.html">Alumnos</a></li>
+                <li><a href="admin/admin.html">Administrador</a></li>
+                <li><a href="teachers/teachers.html">Maestros</a></li>
+                <li><a href="students/students.html">Alumnos</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>Inicio</h2>
         <p>Este es el portal principal de mi sitio web. Selecciona un enlace de arriba para acceder a la sección correspondiente.</p>
     </main>
     <footer>
